--- a/src/main/resources/com/test/showcase.css
+++ b/src/main/resources/com/test/showcase.css
@@ -145,7 +145,6 @@
 
 .style-card .switch-button {
     -fx-text-fill: #1e293b;
-    -fx-label-padding: 0 10 0 0;
     -fx-graphic-text-gap: 10;
 }
 
@@ -251,10 +250,7 @@
     linear-gradient(to bottom, derive(#d0d0d0, -9%) 0%, derive(#d0d0d0, -33%) 100%),
     linear-gradient(to bottom, derive(#d0d0d0, 65%) 2%, derive(#d0d0d0, -5%) 50%, derive(#d0d0d0, -10%) 98%),
     linear-gradient(to bottom, derive(#d0d0d0, 20%) 0%, derive(#d0d0d0, -12%) 100%);
-    -fx-background-insets: 0.166667em 0.166667em 0.083333em 0.166667em,
-    0.166667em,
-    0.25em,
-    0.333333em;
+    -fx-background-insets: 0.166667em 0.166667em 0.125em 0.166667em, 0.166667em, 0.25em, 0.333333em;
     -fx-background-radius: 1em;
     -fx-padding: 0.666667em;
 }
